--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,7 +1,7 @@
 #projects{
     background-color: #12021c;
     width: 100%;
-    height: 600px;
+    height: auto;
     margin-top: -3%;
 }
 
@@ -11,6 +11,7 @@
     color: #5b047e;
     animation: fadeInScale 2s ease-in-out infinite alternate;
     transform-origin: center;
+    margin-top: -100px;
   }
   
   @keyframes fadeInScale {
@@ -23,3 +24,64 @@
       transform: scale(1);
     }
   }
+  .project-img{
+    width: 100%;
+    height: 300px;
+    margin-left: 50px;
+    border-radius: 20px;
+  }
+  .details{
+    color: white;
+  }
+  .project-tech-stack>img{
+width: 40px;
+margin-right: 10px;
+margin-top: -10px;
+  }
+  .project-github-link{
+    margin: 10px;
+    width: 100px;
+    height: 30px;
+    background-color: #12021c;
+    color: white;
+    font-size: 12px;
+    border: 1px solid purple;
+    border-radius: 10px;
+    cursor: pointer;
+  
+  }
+  .project-description{
+    width: 80%;
+    margin-left: 50px;
+  }
+  .project-github-link:hover{
+    border: 1px solid white;
+    color: #5b047e;
+  }
+  .project-deployed-link{
+    margin: 10px;
+    width: 100px;
+    height: 30px;
+    background-color: #12021c;
+    color: white;
+    font-size: 12px;
+    border: 1px solid purple;
+    border-radius: 10px;
+    cursor: pointer;
+  
+  }
+  .project-deployed-link:hover{
+    border: 1px solid white;
+    color: #5b047e;
+  }
+
+.container{
+  margin-bottom: 30px;
+}
+#travel-img{
+  width: 95%;
+}
+
+.react-activity-calendar{
+  margin-left: 100px;
+}
