--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,7 +2,6 @@
     background-color: black;
     max-width: 100%;
     height: 500px;
-    margin-top: -40px;
 }
 .container{
     display: flex;
@@ -24,15 +23,16 @@
     border: 5px solid #5b047e;
 }
 .about-container {
-    text-align: center;
+  margin-bottom: 100px;
   }
   
   .aboutMe {
-    font-size: 50px;
+    font-size: 35px;
     border-bottom: 2px solid  #5b047e;
     color: #5b047e;
     animation: fadeInScale 2s ease-in-out infinite alternate;
     transform-origin: center;
+    
   }
   
   @keyframes fadeInScale {
