--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,6 +2,7 @@
     background-color: black;
     max-width: 100%;
     height: 500px;
+    margin-top: -40px;
 }
 .container{
     display: flex;
@@ -27,7 +28,7 @@
   }
   
   .aboutMe {
-    font-size: 35px;
+    font-size: 60px;
     border-bottom: 2px solid  #5b047e;
     color: #5b047e;
     animation: fadeInScale 2s ease-in-out infinite alternate;
