--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -80,7 +80,7 @@
     border: 1px solid white;
     color: #5b047e;
   }
-  .buttonResume{
+  #resume-button-1{
     width: 100px;
     height: 30px;
     background-color: #12021c;
