--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,92 +1,116 @@
 #home{
-  width: 100%;
-  height: 700px;
-  background-color: #12021c ;
+  background-color:  #12021c;
+  height: 650px;
+}
+.animation{
+  color: #8E05C2;
+}
+#home > .left{
+  display: flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: flex-start;
+  color: white;
+  margin-left: 120px;
+padding-top: 120px;
+}
+#home > .left > p{
+ font-size: 30px;
+ padding-left: 5px;
+}
+#home > .left > h2{
+ font-size: 30px;
+ text-align: left;
+ margin: 20px 0px;
+ margin-top: -20px;
+}
+#resume-button-2{
+  padding: 8px 30px;
+  border-radius: 7px;
+  font-weight: 500;
+  border: 1px solid #8E05C2;
+  background-color: black;
+  cursor: pointer;
+  color: white;
+  margin-left: 10px;
+}
+#resume-button-2:hover{
+  border: 1px solid white;
+  color: #8E05C2;
 }
 
-.image-container{
-    background-color: #12021c ;
-    position: relative;
-    width: 100%;
-    height: 600px;
-    margin-bottom: -24px;
+.buttonContact{
+  padding: 8px 30px;
+  border-radius: 7px;
+  font-weight: 500;
+  border: 1px solid #8E05C2;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.buttonContact:hover{
+  border: 1px solid white;
+  color: #8E05C2;
+}
+
+#home > .right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -200px;
+}
+.background-img{
+  width: 30%;
+  margin-left: 30%;
+
+}
+
+@media only screen   and (min-width:0px) and (max-width:481px){
+ 
+
+ #home> .left > h2{
+      font-size: 28px;
   }
-  
-  .image1{
-    width: 30%;
-  margin-left: 50%;
-  margin-top: 50px;
+  .animation{
+    font-size: 10px;
   }
-  
-  .download{
-    width: 20px;
+  #home{
+      display: flex;
+      flex-direction: column;
   }
-  .button{
-    background-color: #12021c;
-    width: 100px;
-    height: 25px;
-    border: 2px solid #5b047e;
-    border-radius: 10px;
-    color: white;
-    margin-left: 90px;
+  #home > .left{
+      align-items: center;
+   }
+  #home > .left > h2:first-child{
+      text-align: center;
+      font-size: 12px;
+   }
+  #home > .left >.animation{
+    margin-top: 1px;
+      font-size: 19px;
+   }
+   #home > .right{
+      display: none;
   }
-  .button:hover{
-    background-color: #12021c;
-    width: 100px;
-    color: purple;
+
+}
+
+
+@media only screen   and (min-width:887px) and (max-width:1792px){
+  #home > .right{
+    display: none;
+}
+}
+
+
+
+@media only screen   and (min-width:482px) and (max-width:1100px){
+  nav > .left > .animation{
+      font-size: 30px
   }
-  .little {
-    position: relative;
-    float: left;
-    width: 50%;  
-    color: white;
-    margin-top: -30%;
-    margin-right: 150px;
-    font-family: "Gill Sans", sans-serif;
-    font-size: 25px;
-  }
-  
-  #user-detail-name{
-    margin-top: -20px;
-  }
-  .hie{
-    margin-right: 260px;
-  }
-  .animated{
-    color:   #8004af;
-    margin-top: -20px;
-  }
-  .buttons{
-    margin-right: 180px;
-    margin-top: -30px;
-  }
-  .buttonContact{
-    margin: 10px;
-    width: 100px;
-    height: 30px;
-    background-color: #12021c;
-    color: white;
-    font-size: 12px;
-    border: 1px solid purple;
-    border-radius: 10px;
-    cursor: pointer;
-  
-  }
-  .buttonContact:hover{
-    border: 1px solid white;
-    color: #5b047e;
-  }
-  .buttonResume:hover{
-    border: 1px solid white;
-    color: #5b047e;
-  }
-  #resume-button-1{
-    width: 100px;
-    height: 30px;
-    background-color: #12021c;
-    color: white;
-    font-size: 12px;
-    border: 1px solid purple;
-    border-radius: 10px;
-    cursor: pointer;
-  }
+  #home > .right{
+    display: none;
+}
+
+}
