--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,83 +1,121 @@
-#about{
-    background-color: black;
-    max-width: 100%;
-    height: 500px;
-    margin-top: -40px;
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Jost", sans-serif;
 }
-.container{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 100px;
+
+html {
+  font-size: 50.5%;
 }
-.intro{
-    color: white;
-    width:40%;
-    margin-top: 50px;
-    margin-left: 100px;
+
+#about {
+  background-color: black;
+  max-width: 100%;
+  height: 500px;
 }
-.home-img{
-    width: 50%;
-    margin-top: -25px;
-    margin-right: 70px;
-    background-color: white;
-    border-radius: 100%;
-    border: 5px solid #5b047e;
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+.child{
+  width: 100%;
+}
+#user-detail-intro {
+  color: white;
+  width: 50%;
+  font-size: 20px;
+  margin-left: 100px;
+}
+
+.home-img {
+  width: 20%;
+  margin-left: 50%;
+  margin-top: -240px;
+  border-radius: 100%
+}
+
+#contact-github1{
+  width: 30px;
+  margin: 20px;
+}
+#contact-linkedin1{
+  width: 30px;
+  margin: 20px;
+
+
+}
+#contact-email1{
+  width: 30px;
+  margin: 20px;
+}
+#contact-insta1{
+  width: 30px;
+background-color: black;
+  margin: 20px;
+}
+
+#contact-github1:hover{
+  width: 40px;
+
+}
+#contact-linkedin1:hover{
+  width: 40px;
+}
+#contact-email1:hover{
+  width: 40px;
+}
+#contact-insta1:hover{
+  width: 40px;
+}
+
 .about-container {
   margin-bottom: 100px;
-  }
-  
-  .aboutMe {
-    font-size: 60px;
-    border-bottom: 2px solid  #5b047e;
-    color: #5b047e;
-    animation: fadeInScale 2s ease-in-out infinite alternate;
-    transform-origin: center;
-    
-  }
-  
-  @keyframes fadeInScale {
-    0% {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
+}
+
+.aboutMe {
+  font-size: 60px;
+  border-bottom: 2px solid #5b047e;
+  color: #5b047e;
+  animation: fadeInScale 2s ease-in-out infinite alternate;
+  transform-origin: center;
+}
+
+/* Keyframes and hover styles */
+
+/* Mobile and Tablet styles */
+@media screen and (max-width: 481px) {
+
+}
+
+@media screen and (min-width: 482px) and (max-width: 1100px) {
+  /* #about {
+    height: auto; 
+    width: 100%;
   }
 
-  #contact-github1{
-    width: 40px;
-    margin: 20px;
-    object-fit: cover;
-  }
-  #contact-linkedin1{
-    width: 40px;
-    margin: 20px;
-    object-fit: cover;
 
-  }
-  #contact-email1{
-    width: 40px;
-    margin: 20px;
-  }
-  #contact-insta1{
-    width: 50px;
-  background-color: black;
-    margin: 20px;
+  .user-detail-intro {
+    width: 100%;
+    max-width: none; 
+    margin-left: 30px;
+    margin-top: -10px;
   }
 
-  #contact-github1:hover{
-    width: 50px;
+  .home-img {
+    width: 20%;
+    margin-left: 30px;
+  } */
 
-  }
-  #contact-linkedin1:hover{
-    width: 50px;
-  }
-  #contact-email1:hover{
-    width: 50px;
-  }
-  #contact-insta1:hover{
-    width: 60px;
-  }
+}
+
+@media screen and (min-width: 887px) and (max-width: 1099px) {
+  /* Add specific styles for tablets if needed */
+}
+
+
+
+
