--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,15 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Jost", sans-serif;
+}
+
+html {
+  font-size: 50.5%;
+}
+
 #contact{
-  background-color: black;
+  background-color: #12021c;
   width: 100%;
-  height: 300px;
-  margin-top: -35px;
+  height: 300px
 }
 .abt>h1 {
-  font-size: 50px;
+  font-size: 40px;
   border-bottom: 2px solid  #5b047e;
   color: #5b047e;
   animation: fadeInScale 2s ease-in-out infinite alternate;
   transform-origin: center;
+  margin-bottom: 40px;
 }
 
 @keyframes fadeInScale {
@@ -36,12 +49,13 @@
 margin-left: 45%;
 }
 .contact-item{
+  font-size: 20px;
   margin: 10px;
 }
 .contact-info{
   color: white;
   margin-top: 60px;
-  margin-left: -190px;
+  margin-left: -230px;
 }
 #contact-email{
   text-decoration: none;
