--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,78 +1,252 @@
-#nav-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: auto;
-  z-index: 1000;
-  background-color: #12021c;
-  padding: 10px 0;
-  height: 50px;
-}
- 
-#nav-menu ul {
-  list-style: none;
+
+ @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+
+* {
   margin: 0;
   padding: 0;
-  font-family: "Gill Sans", sans-serif;
-
-}
-.name{
-  color: white;
+  box-sizing: border-box;
+  font-family: "Jost", sans-serif;
 }
 
-#nav-menu ul li {
-  display: inline-block;
-  margin-left: 10px;
-  font-family: "Gill Sans", sans-serif;
-}
-#nav-menu ul li:hover {
-  border-bottom: 1px solid purple;
-  font-size: 20px;
-}
-#nav-menu ul li:first-child {
-  margin-right: 200px;
-  font-size: 30px;
-  font-weight: bold;
+html {
+  font-size: 50.5%;
 }
 
-#nav-menu ul li:first-child:hover{
-  border-bottom: none;
-}
-
-#nav-menu ul li:last-child {
-  margin-left: 200px;
-  height: 30px;
-  border-radius: 10px;
-}
-
-#nav-menu ul li:last-child:hover {
-border-bottom: none;
-}
-
-.nav-link {
+a {
   text-decoration: none;
-  color: black;
-  font-weight: 200;
-  padding: 10px 20px;
-  transition: background-color 0.3s;
-  color: white;
 }
 
-.download{
-  width: 20px;
-  background-color: #12021c;
+li {
+  list-style: none;
 }
-#resume-button-1{
-  padding: 8px 30px;
-  border-radius: 7px;
-  font-weight: 500;
-  border: 1px solid #8E05C2;
+
+
+ 
+.main-nav {
+  width: 100%;
+  position: fixed;
   background-color: black;
-  cursor: pointer;
-  color: white;
-  margin-left: 10px;
+  height: 8.5rem;
+  display: grid;
+  grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
 }
+
+.logo {
+  display: grid;
+  grid-column: 2/3;
+  justify-content: start;
+  align-items: center;
+}
+
+.menu-link {
+  grid-column: 3/4;
+}
+
+.menu-link ul {
+  height: 10rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.social-media {
+  grid-column: 4/5;
+}
+
+.social-media ul {
+  height: 10rem;
+  display: grid;
+  grid-template-columns: 3fr repeat(3, 1fr);
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.social-media ul li {
+  text-align: right;
+}
+
+.social-media ul li:first-child {
+  grid-column: 3/1;
+}
+
+/* ----------- Grid part ends ----------------- */
+
+.logo h2 {
+  font-size: 4rem;
+  font-weight: 400;
+color: white;
+}
+
+
+
+.menu-link ul li {
+  font-size: 1.8rem;
+}
+
+.menu-link ul li a {
+  color: white;
+}
+.menu-link ul li:hover > a {
+  border-bottom: 2px solid purple;
+}
+
+
+.social-media .hamburger-menu {
+  display: none;
+}
+
+
+#resume-button-1{
+  border: 1px solid  #8303b5;
+  width: 100px;
+  padding: 10px;
+  cursor: pointer;
+  background-color:  #12021c;
+  color: white;
+  border-radius: 20px;
+}
+
 #resume-button-1:hover{
-  border: none;
-  border-bottom: 1px solid purple;
+  border-bottom: 2px solid #8303b5;
+border-top: none;
+border-left: none;
+border-right: none;
+}
+
+/* responsive css style  */
+@media (max-width: 1080px) {
+  .main-nav {
+    height: 8rem;
+    grid-template-columns: 2rem 3fr 3fr 1fr 2rem;
+  }
+
+  .logo,
+  .menu-link ul,
+  .social-media ul {
+    height: 8rem;
+  }
+}
+
+/* responsive css style  */
+@media (max-width: 998px) {
+  .main-nav {
+    height: 7rem;
+    grid-template-columns: 2rem 2fr 3fr 2rem 2rem;
+  }
+
+  .menu-link {
+    display: none;
+  }
+
+  .logo,
+  .social-media ul {
+    height: 7rem;
+  }
+
+  .mobile-menu-link {
+    grid-column: 2/4;
+    position: relative;
+    z-index: 99;
+  }
+
+  .mobile-menu-link {
+    background-color: black;
+    height: 30rem;
+    display: grid;
+    grid-column: 2/5;
+    align-items: center;
+    padding-left: 3rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  }
+
+  .mobile-menu-link ul {
+    height: 20rem;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .mobile-menu-link ul li:first-child {
+    transition-delay: 0.2s;
+  }
+
+  .social-media {
+    grid-row: 1/2;
+    grid-column: 3/5;
+    justify-items: end;
+    align-items: center;
+    transition: all 2s linear;
+  }
+
+  .social-media .social-media-desktop {
+    height: 0;
+    display: none;
+  }
+
+  .social-media {
+    height: 7rem;
+    display: flex;
+    justify-self: end;
+    align-items: center;
+  }
+
+  .social-media .hamburger-menu {
+    display: block;
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 798px) {
+  .main-nav {
+    height: 6rem;
+    grid-template-columns: 1rem 2fr 1fr 1fr 1rem;
+  }
+
+  .logo,
+  .social-media ul {
+    height: 6rem;
+  }
+
+  .social-media {
+    height: 6rem;
+    display: flex;
+    justify-self: end;
+    align-items: center;
+  }
+
+  .social-media .hamburger-menu {
+    display: block;
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .main-nav {
+    height: 6rem;
+    grid-template-columns: 1rem 4fr 1fr 1fr 1rem;
+  }
+
+  .logo,
+  .social-media ul {
+    height: 6rem;
+  }
+
+  .logo h2 {
+    font-size: 2rem;
+  }
+
+  .social-media {
+    height: 6rem;
+    display: flex;
+    justify-self: end;
+    align-items: center;
+  }
+
+  .social-media .hamburger-menu {
+    display: block;
+    font-size: 2.5rem;
+  }
+
 }
