--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,87 +1,128 @@
-#projects{
-    background-color: #12021c;
-    width: 100%;
-    height: auto;
-    margin-top: -3%;
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Jost", sans-serif;
+}
+
+html {
+  font-size: 50.5%;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+#projects {
+  background-color: black;
+  width: 100%;
 }
 
 .pro {
-    font-size: 50px;
-    border-bottom: 2px solid  #5b047e;
-    color: #5b047e;
-    animation: fadeInScale 2s ease-in-out infinite alternate;
-    transform-origin: center;
-    margin-top: -100px;
-  }
-  
-  @keyframes fadeInScale {
-    0% {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-  .project-img{
-    width: 100%;
-    height: 300px;
-    margin-left: 50px;
-    border-radius: 20px;
-  }
-  .details{
-    color: white;
-  }
-  .project-tech-stack>img{
-width: 40px;
-margin-right: 10px;
-margin-top: -10px;
-  }
-  .project-github-link{
-    margin: 10px;
-    width: 100px;
-    height: 30px;
-    background-color: #12021c;
-    color: white;
-    font-size: 12px;
-    border: 1px solid purple;
-    border-radius: 10px;
-    cursor: pointer;
-  
-  }
-  .project-description{
-    width: 80%;
-    margin-left: 50px;
-  }
-  .project-github-link:hover{
-    border: 1px solid white;
-    color: #5b047e;
-  }
-  .project-deployed-link{
-    margin: 10px;
-    width: 100px;
-    height: 30px;
-    background-color: #12021c;
-    color: white;
-    font-size: 12px;
-    border: 1px solid purple;
-    border-radius: 10px;
-    cursor: pointer;
-  
-  }
-  .project-deployed-link:hover{
-    border: 1px solid white;
-    color: #5b047e;
-  }
-
-.container{
-  margin-bottom: 30px;
-}
-#travel-img{
-  width: 95%;
+  font-size: 50px;
+  border-bottom: 2px solid #5b047e;
+  color: #5b047e;
+  animation: fadeInScale 2s ease-in-out infinite alternate;
+  transform-origin: center;
 }
 
-.react-activity-calendar{
-  margin-left: 100px;
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 50px;
+  gap: 20px;
+}
+
+
+.project-img {
+  width: 80%;
+  height: 300px;
+  margin-left: 50px;
+  border-radius: 40px;
+}
+
+.details {
+  color: white;
+}
+
+.project-tech-stack>img {
+  width: 50px;
+  margin: 10px;
+}
+
+.project-github-link {
+  margin: 10px;
+  width: 100px;
+  height: 30px;
+  background-color: #12021c;
+  color: white;
+  font-size: 12px;
+  border: 1px solid purple;
+  border-radius: 10px;
+  cursor: pointer;
+
+}
+
+.project-title {
+  font-size: 40px;
+}
+
+.project-description {
+  width: 80%;
+  font-size: 17px;
+  margin-left: 60px;
+}
+
+.tachstacks{
+  font-size: 30px;
+}
+
+.project-github-link:hover {
+  border-bottom: 2px solid #5b047e;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+.project-deployed-link {
+  margin: 10px;
+  width: 100px;
+  height: 30px;
+  background-color: #12021c;
+  color: white;
+  font-size: 12px;
+  border: 1px solid purple;
+  border-radius: 10px;
+  cursor: pointer;
+
+}
+
+.project-deployed-link:hover {
+  border-bottom: 2px solid #5b047e;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+
+.github{
+  margin-top: 40px;
 }
