--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -25,7 +25,8 @@ li {
 .main-nav {
   width: 100%;
   position: fixed;
-  background-color: black;
+  background-color: black; /* Use a semi-transparent background color */
+  backdrop-filter: blur(10px); 
   height: 8.5rem;
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
