--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
 
 
-#about {
+div[id="about"] {
   background-color: black;
   max-width: 100%;
    padding-bottom: 100px;
