--- a/src/styles/skill.module.css
+++ b/src/styles/skill.module.css
@@ -84,6 +84,73 @@ html {
     transform: scale(1.2); 
   }
   
+  .tools{
+    margin-top: 80px;
+    color: #510471;
+  }
+
+  .animations{
+    font-size: 30px;
+    border-bottom: 2px solid  #5b047e;
+    color: #5b047e;
+    animation: fadeInScale 2s ease-in-out infinite alternate;
+    transform-origin: center;
+  }
+
+  @keyframes fadeInScale {
+    0% {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  .images1{
+    width: 60%;
+    height: 100px;
+    border-radius: 50%;
+  }
+
+  .containerTools{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin: auto;
+    gap: 30px;
+    width: 50%;
+    padding-top: 50px;
+  }
+
+  .toolImage {
+    width: 200px;
+    border-radius: 50px;
+    padding-top: 20px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+  }
+  
+  .toolImage:hover {
+    background-color: #5b047e; 
+    border: 2px solid rgb(54, 7, 7); 
+    animation: border-pulse 0.6s infinite alternate; 
+  }
+
+  .toolName{
+    color:  #5b047e;
+    padding: 10px;
+    font-size: 20px;
+
+  }
+  
+  @keyframes border-pulse {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
 
 @media (max-width: 768px) {
   .skill {
@@ -112,5 +179,28 @@ html {
   #skillCard>img {
     width: 60px;
     height: 60px;
+  }
+
+  .tools {
+    font-size: 30px; 
+  }
+
+  .containerTools {
+    grid-template-columns: repeat(2, 1fr); 
+    width: 80%;
+  }
+
+  .toolImage {
+    width: 150px;
+  }
+
+  .toolImage:hover {
+    background-color: #5b047e; 
+    border: 2px solid rgb(54, 7, 7); 
+    animation: none;
+  }
+
+  .toolName {
+    font-size: 24px;
   }
 }
