--- a/src/styles/skill.module.css
+++ b/src/styles/skill.module.css
@@ -109,7 +109,7 @@ html {
   }
 
   .images1{
-    width: 60%;
+    width: 50%;
     height: 100px;
     border-radius: 50%;
   }
@@ -139,7 +139,8 @@ html {
   .toolName{
     color:  #5b047e;
     padding: 10px;
-    font-size: 20px;
+    font-size: 30px;
+    
 
   }
   
@@ -153,6 +154,7 @@ html {
   }
 
 @media (max-width: 768px) {
+
   .skill {
     font-size: 30px; 
   }
@@ -192,6 +194,7 @@ html {
 
   .toolImage {
     width: 150px;
+    margin: 0 auto;
   }
 
   .toolImage:hover {
@@ -202,5 +205,9 @@ html {
 
   .toolName {
     font-size: 24px;
+  }
+  .images1{
+    width: 60px;
+    height: 60px;
   }
 }
