--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -25,11 +25,13 @@ li {
 .main-nav {
   width: 100%;
   position: fixed;
-  background-color: black;
-  backdrop-filter: blur(10px); 
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 1);
   height: 8.5rem;
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
+  z-index: 1000;
 }
 
 .logo {
@@ -73,7 +75,7 @@ li {
 
 
 .logo h2 {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 400;
 color: white;
 }
@@ -86,6 +88,7 @@ color: white;
 
 .menu-link ul li a {
   color: white;
+  cursor: pointer;
 }
 .menu-link ul li:hover > a {
   border-bottom: 2px solid purple;
