--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,4 @@
-
- @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
 
 * {
   margin: 0;
@@ -21,7 +20,6 @@ li {
 }
 
 
- 
 .main-nav {
   width: 100%;
   position: fixed;
@@ -77,10 +75,15 @@ li {
 .logo h2 {
   font-size: 4rem;
   font-weight: 400;
-color: white;
+  color: white;
+  cursor: pointer;
 }
 
-
+.logo h2:hover {
+  transform: scale(1.3);
+  color: #8E05C2;
+  transition: transform 0.6s ease-in-out, color 0.3s ease-in-out; 
+}
 
 .menu-link ul li {
   font-size: 1.8rem;
@@ -90,8 +93,16 @@ color: white;
   color: white;
   cursor: pointer;
 }
-.menu-link ul li:hover > a {
-  border-bottom: 2px solid purple;
+
+.menu-link ul li:hover {
+  transform: scale(1.3);
+  color: #8E05C2;
+  transition: transform 0.6s ease-in-out, color 0.3s ease-in-out; 
+
+}
+
+.menu-link ul li:hover >a {
+  color: #8E05C2;
 }
 
 
@@ -100,21 +111,18 @@ color: white;
 }
 
 
-#resume-button-1{
-  border: 1px solid  #8303b5;
+#resume-button-1 {
+  border: none;
   width: 100px;
   padding: 10px;
   cursor: pointer;
-  background-color:  #12021c;
+  background-color: black;
   color: white;
   border-radius: 20px;
 }
 
-#resume-button-1:hover{
-  border-bottom: 2px solid #8303b5;
-border-top: none;
-border-left: none;
-border-right: none;
+#resume-button-1:hover {
+  box-shadow: 0 8px 20px rgb(177, 1, 246);
 }
 
 @media (max-width: 1080px) {
@@ -212,7 +220,7 @@ border-right: none;
     height: 6rem;
   }
 
- 
+
 
 
   .social-media {
