--- a/src/styles/skill.module.css
+++ b/src/styles/skill.module.css
@@ -12,147 +12,156 @@ html {
 }
 
 
-.allSkills{
-    background-color: #12021c;
-    max-width: 100%;
-    padding-bottom: 100px;
+.allSkills {
+  background-color: #12021c;
+  max-width: 100%;
+  padding-bottom: 100px;
 }
+
+.skillContainer{
+  width: 92%;
+  padding-top: 20px;
+}
+
 .skill {
-    font-size: 50px;
-    border-bottom: 2px solid  #5b047e;
+  font-size: 40px;
+  color: #5b047e;
+  animation: fadeInScaleColorMove 2s ease-in-out infinite alternate;
+  padding-left: 150px;
+}
+
+@keyframes fadeInScaleColorMove {
+  0% {
+    opacity: 0;
+    transform: scale(0.8) translateY(-10px);
     color: #5b047e;
-    animation: fadeInScale 2s ease-in-out infinite alternate;
-    transform-origin: center;
-  }
-  
-  @keyframes fadeInScale {
-    0% {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
+    /* Initial color */
   }
 
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #skillCard {
-    width: 200px;
-    border-radius: 50px;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-  }
-  
-  #skillCard:hover {
-    background-color: #5b047e; 
-    animation: border-pulse 0.6s infinite alternate; 
-  }
-  
-  @keyframes border-pulse {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.1);
-    }
-  }
-  
-  .grid{
-   display: grid;
-   grid-template-columns: repeat(3,1fr);
-   margin: auto;
-   width: 50%;
-   gap: 30px;
-   padding-top: 50px;
-  }
- 
-  #skillCard>img{
-    width: 100px;
-    margin-top: 20px;
-    height: 60%;
-  }
-  #skillCard p{
-    color:  #5b047e;
-    font-size: 30px;
-  }
-  #skillCard:hover  #skillCard>img{
-    transform: scale(1.2); 
-  }
-  
-  .tools{
-    margin-top: 80px;
-    color: #510471;
+  50% {
+    opacity: 0.8;
+    transform: scale(1.1) translateY(0);
+    color: #8303b5;
+    /* Color change halfway through */
   }
 
-  .animations{
-    font-size: 30px;
-    border-bottom: 2px solid  #5b047e;
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
     color: #5b047e;
-    animation: fadeInScale 2s ease-in-out infinite alternate;
-    transform-origin: center;
+    /* Back to the initial color */
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#skillCard {
+  width: 200px;
+  border-radius: 50px;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+#skillCard:hover {
+  box-shadow: 0 15px 20px rgb(177, 1, 246);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: auto;
+  width: 50%;
+  gap: 30px;
+  padding-top: 50px;
+}
+
+#skillCard>img {
+  width: 100px;
+  margin-top: 20px;
+  height: 60%;
+}
+
+#skillCard p {
+  color: #8303b5;
+  font-size: 30px;
+}
+
+
+
+.tools {
+  margin-top: 80px;
+  color: #8303b5;
+}
+
+.animations {
+  width: 92%;
+  padding-left: 150px;
+  font-size: 20px;
+  animation: fadeInScaleColorMove 2s ease-in-out infinite alternate;
+}
+
+@keyframes fadeInScaleColorMove {
+  0% {
+    opacity: 0;
+    transform: scale(0.8) translateY(-10px);
+    color: #8303b5;
   }
 
-  @keyframes fadeInScale {
-    0% {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
+  50% {
+    opacity: 0.8;
+    transform: scale(1.1) translateY(0);
+    color: #8303b5;
   }
 
-  .images1{
-    width: 50%;
-    height: 100px;
-    border-radius: 50%;
+  100% {
+    opacity: 1;
+    transform: scale(1) translateY(0);
+    color: #8303b5;
   }
+}
 
-  .containerTools{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    margin: auto;
-    gap: 30px;
-    width: 50%;
-    padding-top: 50px;
-  }
+.images1 {
+  width: 50%;
+  height: 100px;
+  border-radius: 50%;
+}
 
-  .toolImage {
-    width: 200px;
-    border-radius: 50px;
-    padding-top: 20px;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-  }
-  
-  .toolImage:hover {
-    background-color: #5b047e; 
-    animation: border-pulse 0.6s infinite alternate; 
-  }
+.containerTools {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: auto;
+  gap: 30px;
+  width: 50%;
+  padding-top: 50px;
+}
 
-  .toolName{
-    color:  #5b047e;
-    padding: 10px;
-    font-size: 30px;
-  }
-  
-  @keyframes border-pulse {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
+.toolImage {
+  width: 200px;
+  border-radius: 50px;
+  padding-top: 20px;
+}
+
+.toolImage:hover {
+  box-shadow: 0 15px 20px rgb(177, 1, 246);
+}
+
+.toolName {
+  color: #5b047e;
+  padding: 10px;
+  font-size: 30px;
+}
+
+
 
 @media (max-width: 768px) {
 
   .skill {
-    font-size: 30px; 
+    font-size: 30px;
+    text-align: center;
+    padding-left: 0;
   }
 
   .allSkills {
@@ -161,7 +170,7 @@ html {
   }
 
   .grid {
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
   }
 
@@ -171,7 +180,7 @@ html {
     margin: 0 auto;
   }
 
-  #skillcard:hover{
+  #skillcard:hover {
     width: 2px;
   }
 
@@ -185,11 +194,16 @@ html {
   }
 
   .tools {
-    font-size: 30px; 
+    font-size: 30px;
+  }
+
+  .animations{
+    text-align: center;
+    padding-left: 0;
   }
 
   .containerTools {
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
   }
 
@@ -202,9 +216,10 @@ html {
   .toolName {
     font-size: 20px;
   }
-  .images1{
+
+  .images1 {
     width: 60px;
     height: 60px;
   }
-  
+
 }
