--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -115,15 +115,15 @@ form textarea{
   border-radius: 10px;
 }
 .submitButton{
-  padding: 20px 120px;
+  padding: 10px 80px;
   border-radius: 7px;
   border: none;
   font-weight: 500;
+  font-size: 20px;
   box-shadow: 0 10px 20px rgb(177, 1, 246);
   background-color: black;
   cursor: pointer;
-  color: white;
-  margin-left: 10px;
+  color: gray;
 }
 
 
@@ -157,9 +157,9 @@ margin-top: -220px;
     padding: 7px 60px;
     border-radius: 7px;
     font-weight: 500;
-    border: 2px solid #8E05C2;
     background-color: black;
     cursor: pointer;
+    font-size: 16px;
     color: white;
   }
   
