--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,266 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+/* In navbar.css or appropriate CSS file */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Jost", sans-serif;
-}
+#nav-menu {
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    z-index: 50; 
+  }
+  
+  nav {
+    backdrop-filter: blur(10px); 
+    transition: background-color 0.3s ease;
+  }
+  
+    .mobile-menu {
+    z-index: 60; /* Ensure mobile menu is also on top */
+  }
+  
 
-html {
-  font-size: 50.5%;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-
-.main-nav {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 1);
-  height: 8.5rem;
-  display: grid;
-  grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
-  z-index: 1000;
-}
-
-.logo {
-  display: grid;
-  grid-column: 2/3;
-  justify-content: start;
-  align-items: center;
-}
-
-.menu-link {
-  grid-column: 3/4;
-}
-
-.menu-link ul {
-  height: 10rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.social-media {
-  grid-column: 4/5;
-}
-
-.social-media ul {
-  height: 10rem;
-  display: grid;
-  grid-template-columns: 3fr repeat(3, 1fr);
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.social-media ul li {
-  text-align: right;
-}
-
-.social-media ul li:first-child {
-  grid-column: 3/1;
-}
-
-
-
-.logo h2 {
-  font-size: 4rem;
-  font-weight: 400;
-  color: white;
-  cursor: pointer;
-}
-
-.logo h2:hover {
-  transform: scale(1.3);
-  color: #8E05C2;
-  transition: transform 0.6s ease-in-out, color 0.3s ease-in-out; 
-}
-
-.menu-link ul li {
-  font-size: 1.8rem;
-}
-
-.menu-link ul li a {
-  color: white;
-  cursor: pointer;
-}
-
-.menu-link ul li:hover {
-  transform: scale(1.3);
-  color: #8E05C2;
-  transition: transform 0.6s ease-in-out, color 0.3s ease-in-out; 
-
-}
-
-.menu-link ul li:hover >a {
-  color: #8E05C2;
-}
-
-
-.social-media .hamburger-menu {
-  display: none;
-}
-
-
-#resume-button-1 {
-  border: none;
-  width: 100px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: black;
-  color: white;
-  border-radius: 20px;
-}
-
-#resume-button-1:hover {
-  box-shadow: 0 8px 20px rgb(177, 1, 246);
-}
-
-@media (max-width: 1080px) {
-  .main-nav {
-    height: 8rem;
-    grid-template-columns: 2rem 3fr 3fr 1fr 2rem;
+  @media (max-width: 768px) {
+ 
+    
+    nav {
+      backdrop-filter: blur(10px); 
+      transition: background-color 0.3s ease;
+    }
+    
+      .mobile-menu {
+      z-index: 160; 
+    }
   }
 
-  .logo,
-  .menu-link ul,
-  .social-media ul {
-    height: 8rem;
-  }
-}
-
-@media (max-width: 998px) {
-  .main-nav {
-    height: 7rem;
-    grid-template-columns: 2rem 2fr 3fr 2rem 2rem;
-  }
-
-  .menu-link {
-    display: none;
-  }
-
-
-  .logo,
-  .social-media ul {
-    height: 7rem;
-  }
-
-  .mobile-menu-link {
-    grid-column: 2/4;
-    position: relative;
-    z-index: 99;
-  }
-
-  .mobile-menu-link {
-    background-color: black;
-    height: 30rem;
-    display: grid;
-    grid-column: 2/5;
-    align-items: center;
-    padding-left: 3rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  }
-
-  .mobile-menu-link ul {
-    height: 20rem;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .mobile-menu-link ul li:first-child {
-    transition-delay: 0.2s;
-  }
-
-  .social-media {
-    grid-row: 1/2;
-    grid-column: 3/5;
-    justify-items: end;
-    align-items: center;
-    transition: all 2s linear;
-  }
-
-  .social-media .social-media-desktop {
-    height: 0;
-    display: none;
-  }
-
-  .social-media {
-    height: 7rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 798px) {
-  .main-nav {
-    height: 6rem;
-    grid-template-columns: 1rem 2fr 1fr 1fr 1rem;
-  }
-
-  .logo,
-  .social-media ul {
-    height: 6rem;
-  }
-
-
-
-
-  .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 520px) {
-  .main-nav {
-    height: 6rem;
-    grid-template-columns: 1rem 4fr 1fr 1fr 1rem;
-  }
-
-  .logo,
-  .social-media ul {
-    height: 6rem;
-  }
-
-  .logo h2 {
-    font-size: 4rem;
-  }
-
-  .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-
-}
+  
