--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -38,24 +38,6 @@ li {
   padding-left: 150px;
 }
 
-@keyframes fadeInScaleColorMove {
-  0% {
-    opacity: 0;
-    transform: scale(0.8) translateY(-10px);
-    color: #5b047e; /* Initial color */
-  }
-  50% {
-    opacity: 0.8;
-    transform: scale(1.1) translateY(0);
-    color: #8303b5; /* Color change halfway through */
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) translateY(0);
-    color: #5b047e; /* Back to the initial color */
-  }
-}
-
 #projectCard {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -65,7 +47,7 @@ li {
 
 
 .projectImg {
-  width: 80%;
+  width: 100%;
   height: 300px;
   margin-left: 50px;
   border-radius: 40px;
@@ -73,7 +55,9 @@ li {
 
 .details {
   color: white;
+  padding-left: 70px;
 }
+
 .details h2{
   font-size: 40px;
 }
@@ -85,6 +69,11 @@ li {
 
 .details h1{
   font-size: 30px;
+}
+
+#stacks{
+  display: flex;
+  justify-content: center;
 }
 
 #stacks>img {
@@ -131,37 +120,14 @@ li {
 }
 
 
-.github{
-  margin-top: 40px;
-  gap: 20px;
-}
-
-
-.streakStats{
-width: 36%;
-padding-top: 40px;
-}
-
-.wrapper {
+.github {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.calendar{
-  width: 50%;
-  color: white;
-  padding-top: 40px;
-
-}
-
-.statsCard{
-  padding-top: 40px;
-}
-.stats{
-  color: white;
-  font-size: 40px;
-  padding-bottom: 20px;
+  gap: 20px;
+  text-align: center;
+  padding: 20px;
 }
 
 
@@ -178,14 +144,16 @@ padding-top: 40px;
   .projectImg {
     width: 80%;
     height: auto; 
-    margin-left: 0;
-    border-radius: 20px; 
   }
 
   #projectCard {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
+  }
+
+  .details{
+    padding-right: 40px;
   }
 
   .details h2 {
